# PI-CPP-Python-Example

./: .gitignore  CMakeLists.txt  README.md  boosttest.cpp  cppclass.cpp  cppclass.hpp  cppcode.cpp  cppcode.hpp  cpptest.cpp  test-class.py  test-code.py
.github/workflows/: cmake.yml
